// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> snapshotting should render correctly with a content 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
>
  Lorem Ipsulum
</p>
`;

exports[`<Paragraph /> snapshotting should render correctly without a content 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
/>
`;
